k8s/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: %APPNAME%
spec:
  replicas: 1
  selector:
    matchLabels:
      app: %APPNAME%
  template:
    metadata:
      labels:
        app: %APPNAME%
    spec:
      restartPolicy: Always
      containers:
        - image: %GITURI%
          imagePullPolicy: Always
          name: %APPNAME%
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: gitlab
