k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: %APPNAME%
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: %URI%
      http:
        paths:
          - backend:
              service:
                name: %APPNAME%
                port:
                  number: 80
            path: /
            pathType: Prefix
